--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,20 @@ body {
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+    perspective: 1000px;
 }
 
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: azure;
+    /* background-color: azure; */
 }
 
 .card {
+    transform-style: preserve-3d;
     min-height: 80vh;
-    width: 20rem;
+    width: 30rem;
     border-radius: 30px;
     padding: 0rem 4rem;
     box-shadow: 0 20px 20px rgba(0,0,0,0.2);
